# tmanagement

./: README.md  calculate_router.py  compute_service.py  database.py  main.py  models_db.py  pyproject.toml  schemas.py  test_db.py  test_main.http
crud/: orders_crud.py  tasks_crud.py
routers/: calculate_router.py  orders_routers.py  tasks_routers.py
tests/: conftest.py  test_order.py
